# Livraria

./: .gitignore  Insomnia_2022-09-02.json  db.sqlite3  output.dot  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_autor.py  0003_alter_autor_options_livro.py  0004_livro_autores.py  0005_rename_category_livro_categoria.py  0006_compra.py  0007_itenscompra.py
core/views/: __init__.py  autor.py  categoria.py  categoriaApiView.py  categoriaClass.py  categoriaGeneric.py  compra.py  editora.py  livro.py
livraria/: settings.py  urls.py
static/: staticfiles.json
